# ws

./: .gitignore  LICENSE  README.md  package.yaml  stack.yaml  ws.cabal
app/: Main.hs
src/: App.hs  Main.hs
src/App/: Types.hs
test/: AppSpec.hs
