Name:                   ws
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A simple CLI utility for interacting with a websocket
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      App
                        App.Types
  Build-Depends:        base >= 4.8 && < 5
                      , exceptions
                      , mtl
                      , network
                      , network-uri
                      , text
                      , websockets
                      , wuss

Executable ws
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Other-Modules:        App
                        App.Types
  Build-Depends:        base
                      , exceptions
                      , mtl
                      , network
                      , network-uri
                      , optparse-applicative
                      , text
                      , websockets
                      , wuss


Source-Repository head
  Type:                 git
--  Location:
